Do Class 5 Specificity exercise

--- a/Homework/Class 5/specificity-practice/css/style.css
+++ b/Homework/Class 5/specificity-practice/css/style.css
@@ -1,7 +1,23 @@
 /* Please Make only Rhino and Zebra Blue */
 
+.top {
+    color: blue;
+}
+
 /* Please Make only Hufflepuff Gold */
+
+.harryPotter {
+    color: gold;
+}
 
 /* Please select Duck with the highest level of specificity possible */
 
+article .likesToQuack .fight1Or100 {
+    color: black;
+}
+
 /* Please select Rhino with the highest level of specificity possible */
+
+section #rhino .africa .fourLegs {
+    color: black;
+}
