--- a/Homework/Class 5/layout1/style.css
+++ b/Homework/Class 5/layout1/style.css
@@ -5,21 +5,21 @@
 }
 
 header,footer {
-    border: 2px solid black;
+    border: 2px solid rgb(210, 215, 211);
     height: 100px;
     width: 100%;
     clear: both;
 }
 
 .topSections {
-    border: 2px solid black;
+    border: 2px solid rgb(210, 215, 211);
     float: left;
     height: 150px;
     width: 33.33%;
 }
 
 .bottomSections {
-    border: 2px solid black;
+    border: 2px solid rgb(210, 215, 211);
     float: left;
     height: 150px;
     width: 50%;
