--- a/Homework/Class 5/layout3/style.css
+++ b/Homework/Class 5/layout3/style.css
@@ -1,3 +1,12 @@
 * {
     box-sizing: border-box;
+    text-align: center;
+    align-content: center;
+}
+
+header,footer {
+    border: 2px solid rgb(210, 215, 211);
+    height: 100px;
+    width: 100%;
+    clear: both;
 }
