Continue with BBC css layout

--- a/Homework/Class 8/layout3/css/style.css
+++ b/Homework/Class 8/layout3/css/style.css
@@ -22,12 +22,17 @@
 /*******************************************/
 
 body {
-  margin: 0;
+    
 }
 
 a {
   text-decoration: none;
   color: white;
+}
+
+h4 {
+  border-left: 2px solid red;
+  padding-left: 5px;
 }
 
 
@@ -37,39 +42,87 @@ a {
 header {
   background: black;
   color: white;
+  height: 4em;
   text-align: center;
+  padding-top: 10px;
+  width: 100%;
 }
 
-nav {
-  background: black;
-  color: white;
+.navSectionOne {
   float: left;
-  height: 60px;
-  width: 80%;
-  padding: 5px;
+  width: 10%;
 }
 
-nav + section {
-  background: black;
-  color: white;
+.navSectionTwo {
   float: left;
-  height: 60px;
+  width: 70%;
+}
+
+.navSectionThree {
+  float: left;
   width: 20%;
-  padding: 5px;
 }
 
 footer {
 
 }
 
+#highlights,#news,.titles {
+  clear: both;
+}
+
+.big,.small {
+  float: left;
+  height: 300px;
+  width: 50%;
+}
+
+
+.subSection {
+  float: left;
+  height: 150px;
+  width: 50%;
+}
+
+.news {
+  float: left;
+  height: 350px;
+  width: 33.33%;
+  padding: 10px;
+}
+
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
-nav ul li {
+.cover {
+  height: 300px;
+}
+
+ul li {
+  border-right: 1px solid lightgray;
   display: inline;
   list-style-type: none;
-  color: white;
-  border-right: 2px solid gray;
-  text-decoration: none;
+  padding: 0 20px;
+}
+
+.israel {
+  background: url(../images/Israel_UAE.png);
+  background-size: cover;
+}
+
+.usCanada {
+  background: url(../images/Tension_at_Canada_US_border.png);
+}
+
+.vaccinate {
+  background: url(../images/vaccinate_seven_billion_people.png);
+}
+
+.gyms {
+  background: url(../images/online_productivity_gyms.png);
+}
+
+.singer {
+  background: url(../images/singer.png);
 }
